--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-a">
+        <meta charset="utf-8">
        
         <title>Facts of Dragons</title>
         <style>
@@ -46,14 +46,22 @@
 
         </ul>
         <h3>Different Dragon Forms</h3>
+        <ul>
         <li>winged</li>
+        </ul>
         <Img src="Quetzalcoatl.jpg" alt="Quetzalcoatl">
+        <ul>
         <li>swimming</li>
-        <Img src="Water Dragon.jpg" alt="Orion">
+        </ul>
+        <Img src="Water-Dragon.jpg" alt="Orion">
+        <ul>
         <li>underground</li>
+        </ul>
         <Img src="Wyrm.jpg" alt="Wyrm">
+        <ul>
         <li><a href="https://www.factretriever.com/dragon-facts" target="_blank">Dragon Facts</a></li>
+        </ul>
 
-        <p>&copy: 2023 Introduction to HTML</p>
+        <p>&copy; 2023 Introduction to HTML</p>
     </body>
 </html>
